2009-01-15  higepon  <higepon@users.sourceforge.jp>

        * ObjectTest.cpp: Added for testing "Base system" of Mosh.

        * Makefile.am (test): Renamed some tests.
          (nobase_data_DATA): Added pp.ss to installed files.

        * test/ffi.scm : Added tests for FFI API.

        * lib/mosh/test.ss : Fixed a buf when NG.

        * lib/mosh/ffi.ss : Added.

        * test-data.scm (let*): Added test for %ffi-pointer-ref and %ffi-pointer->string.

2009-01-14  higepon  <higepon@users.sourceforge.jp>

        * Bignum.h (scheme): Fixed conversion things.

2009-01-13  higepon  <higepon@users.sourceforge.jp>

        * FFIProcedures.cpp: Use intptr_t instead of uint64_t.

        * Bignum.h (scheme): Added for compatibility.

        * configure.ac : On OSX don't use -shared option use -dynamiclib option instread.

2009-01-12  higepon  <higepon@users.sourceforge.jp>

        * Added %ffi-call->void.

        * FFITest.cpp (TEST_F): Added test for FFI ByteVector.

        * FFI.cpp (CStack::push): Added char* support to FFI.

2009-01-11  higepon  <higepon@users.sourceforge.jp>

        * FFITest.cpp : Added Test for pushing Fixnum to CStack.

        * FFIProcedures.cpp : Added %ffi-open and %ffi-lookup.

        * FFITest.cpp : Added.

        * FFI.cpp: Added for Foreign Function Interface.

        * Makefile.am (noinst_LTLIBRARIES): Added libffitest.la for test.

2009-01-10  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm : Added some datum comment tests.

        * Reader.y (datum): Fixed "Issue 36: double datum comment causes error" pointed out by leque.
                            Thanks to SaitoAtsushi for the patch.

2008-01-08  kokosabu  <kokosabu@gmail.com>

        * Changed: get-bytevector-u(file).

2009-01-09  higepon  <higepon@users.sourceforge.jp>

        * shell: Added.

        * lib/mosh/shell/repl.ss: Added Shell REPL.

        * lib/mosh/shell.ss : Added Shell script library.
